# OrgMaker-3

./: .gitignore  CMakeLists.txt  Per01  README.md  beat.org  buckethead.org  out.txt  pause.org  secretbase.org  test.org  themoon.org  title.org
src/: Attributes.h  Audio.cpp  Audio.h  ContentProvider.cpp  ContentProvider.h  Error.cpp  Error.h  FixedPoint.h  Main.cpp  Organya.cpp  Organya.h  Placement.h  Task.h  Task_Editor.cpp  Task_Editor.h  Task_EditorWindow.cpp  Task_EditorWindow.h  Window.h  rWave.h
src/Resources/: BASS01.h  BASS02.h  BASS03.h  BASS04.h  BASS05.h  BASS06.h  BASS07.h  BASS08.h  BELL.h  CAT.h  CLAP01.h  CRASH.h  CRASH02.h  HICLOSE.h  HICLOSE02.h  HICLOSE03.h  HICLOSE04.h  HICLOSE05.h  HIOPEN.h  HIOPEN02.h  HIOPEN03.h  HIOPEN04.h  ORCDRM01.h  PER01.h  PER02.h  PESI01.h  QUICK01.h  REVSYM01.h  RIDE01.h  SNARE01.h  SNARE02.h  SNARE03.h  SNARE04.h  SNARE05.h  SNARE06.h  SNARE07.h  SNARE08.h  TOM01.h  TOM02.h  TOM03.h  (+3 more)
